# backend/src/modules/accounts/interface/http/routes.ts
@@ -13,6 +13,7 @@ accountRouter.get('/:accountId', accountController.getById);
 accountRouter.post('/', accountController.create);
 accountRouter.patch('/:accountId', accountController.update);
 accountRouter.delete('/:accountId', accountController.delete);
+accountRouter.post('/:accountId/reset-mfa', accountController.resetMfa);
 accountRouter.post('/:accountId/activate', accountController.activate);
 accountRouter.post('/:accountId/deactivate', accountController.deactivate);
 accountRouter.post('/:accountId/assign-barangay', accountController.assignBarangayEndpoint);
